[package]
name = "tracker"
version = "0.1.1"
authors = ["ShenMian <sms_school@outlook.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
sgp4 = "2.2"
reverse_geocoder = "4.1"
isocountry = "0.3"
arboard = "3.4"
ureq = { version = "2.11", features = ["json"] }

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"

# Utilities
anyhow = "1.0"
chrono = "0.4"
strum = { version = "0.26", features = ["derive"] }

# Async
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
